--- a/app/templates/contentsignedout.html
+++ b/app/templates/contentsignedout.html
@@ -451,7 +451,7 @@
                 getting the first peak at out upcoming book releases. involvement, </p>
             <div class="btn_container">
                 <a href="{{ url_for('login') }}"><button class="btnn">Writer's block</button></a>
-                <a href="{{ url_for('login') }}"><button class="btnn">Reader's club</button></a>
+                <a href="{{ url_for('login') }}"><button class="btnn">Espresso Book club</button></a>
             </div><!--btn_container-->
             <h3>CONNECT WITH US</h3>
             <div class="btn_container">
