--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -12,9 +12,9 @@
     <script src= "{{ url_for('static', filename='node_modules/bootstrap/dist/js/bootstrap.bundle.min.js') }}"></script>
     
 
-    <!--Static CSS specific for base.html-->
-    <styles>{% block css %} {% endblock%}</styles> <!--css specific to the child templates-->
-    <styles>{% block cssbackup %} {% endblock%}</styles>
+    <!-- Static CSS specific for base.html -->
+    {% block css %} {% endblock %} <!-- CSS specific to the child templates -->
+    {% block cssbackup %} {% endblock %} <!-- backup styles specific to child templates -->
     <!--<link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">-->
     
 
@@ -26,6 +26,10 @@
     <!--<link href="https://fonts.googleapis.com/css2?family=Playwrite+AU+QLD+Guides&family=Playwrite+CO+Guides&display=swap" rel="stylesheet">-->
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <!--<link href="https://fonts.googleapis.com/css2?family=Playwrite+IN:wght@100..400&family=Playwrite+PL:wght@100..400&display=swap" rel="stylesheet">-->
+    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
+    
+    
 
     
     
@@ -55,6 +59,6 @@
     {% block js %} {% endblock%}
 
 
-    <script src=''></script>
+    
 </body>
 </html>
