--- a/app/templates/nav_in.html
+++ b/app/templates/nav_in.html
@@ -3,12 +3,21 @@
 <div class="navigation_bar">
      
       <div class="menu">
-        <h4 class="company-name"><i class="fas fa-book-open" style="margin-right: 2px;"></i>Ink & Coffee</h4> 
-          <h5 class="nav-in-headers"><a href="{{ url_for('login') }}"><i class="fas fa-home" style="margin-right: 2px;"></i>Dashboard</a></h5> 
-          <h5 class="nav-in-headers"><a href="{{ url_for('login') }}"><i class="fas fa-search" style="margin-right: 2px;"></i>Explore</a></h5>
-          <h5 class="nav-in-headers"><a href="{{ url_for('login') }}"><i class="fas fa-shopping-cart" style="margin-right: 2px;"></i>My cart</a></h5> 
-          <h5 class="nav-in-headers"><a href="{{ url_for('login') }}"><i class="fas fa-user" style="margin-right: 2px;"></i>Profile</a></h5> 
+        <h4 class="company-name"><i class="bi bi-book" style="margin-right: 2px;"></i>Ink & Coffee</h4> 
+          <h5 class="nav-in-headers"><a href="{{ url_for('login') }}"><i class="bi bi-house" style="margin-right: 2px;"></i>Dashboard</a></h5> 
+          <h5 class="nav-in-headers"><a href="{{ url_for('explore') }}"><i class="bi bi-search" style="margin-right: 2px;"></i>Explore</a></h5>
+          <h5 class="nav-in-headers"><a href="{{ url_for('login') }}"><i class="bi bi-cart" style="margin-right: 2px;"></i>My cart</a></h5> 
+          <h5 class="nav-in-headers">
+            <a href="{{ url_for('myProfile', username = current_user.username) }}">
+              <i class="bi bi-person" style="margin-right: 2px;"></i>Profile
+            </a>
+          </h5>
+          
+
           <h5 class="nav-in-headers"><a href="{{ url_for('logout') }}">Sign out</a></h5> 
       </div> <!--end of menu-->
-      
+
+
+         
+        
 </div> <!-- End of navigation_bar -->
